# jeq8

./: .gitmodules  CMakeLists.txt  README.md
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorBase.h
Source/web/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
Source/web/src/: app.js
